--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
-!user/pages/*
-!user/themes/*
+!user/pages/
+!user/themes/
+.github/*
+.htaccess
+CHANGELOG.md
+CODE_OF_CONDUCT.md
+CONTRIBUTING.md
+LICENSE.txt
+README.md.grav
+assets/
+backup/
+bin/
+cache/
+composer.json
+composer.lock
+images/
+index.php
+logs/
+now.json
+permissions-set.sh
+robots.txt
+system/
+tmp/
+user/accounts/
+user/config/
+user/data/
+user/plugins/
+user/themes/.gitkeep
+vendor/
+webserver-configs/
